[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "shazam"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8"
description = "I/O for GMRT ring buffers, with the power of SHAZAM!"
authors = [{ name = "Ujjwal Panda", email = "ujjwalpanda97@gmail.com" }]

[project.urls]
Homepage = "https://github.com/astrogewgaw/shazam"

[tool.scikit-build]
wheel.py-api = "cp312"
minimum-version = "0.4"
build-dir = "build/{wheel_tag}"
